--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./styles.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.dev.js"></script>
+
   <title>Web Sockets Web Application</title>
 </head>
 <body>
   <h1>You See Me!</h1>
+  <script src="./chat.js"></script>
 </body>
 </html>
