Added Js Code to Query Dom and Emit Messages from Each Individual Socket to Server and Back to the Browser Front End.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,14 @@
   <title>Web Sockets Web Application</title>
 </head>
 <body>
-  <h1>You See Me!</h1>
+  <div id="live-chat">
+    <div id="chat-window">
+      <div id="output"></div>
+    </div>
+    <input id="handle" type="text" placeholder="Handle">
+    <input id="message" type="text" placeholder="Message" >
+    <button id="send">Send</button>
+  </div>
   <script src="./chat.js"></script>
 </body>
 </html>
