--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.dev.js"></script>
-
+  <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
   <title>Web Sockets Web Application</title>
 </head>
 <body>
@@ -14,10 +17,13 @@
     <div id="chat-window">
       <div id="output"></div>
       <div id="feedback"></div>
+      <div id="scroll"></div>
     </div>
-    <input id="handle" type="text" placeholder="Handle">
-    <input id="message" type="text" placeholder="Message" >
-    <button id="send">Send</button>
+    <form id="form" action="#">
+    <input id="handle" type="text" placeholder="Handle" required>
+    <input id="message" type="text" placeholder="Message" required>
+    <button id="send" >Send</button>
+    </form>
   </div>
   <script src="./chat.js"></script>
 </body>
