--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./styles.css">
+  <!-- Socket.io CDN  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.dev.js"></script>
+  <!-- Socket.io CDN  -->
+
   <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -14,16 +17,25 @@
 </head>
 <body>
   <div id="live-chat">
-    <div id="chat-window">
-      <div id="output"></div>
-      <div id="feedback"></div>
-      <div id="scroll"></div>
-    </div>
-    <form id="form" action="#">
-    <input id="handle" type="text" placeholder="Handle" required>
-    <input id="message" type="text" placeholder="Message" required>
-    <button id="send" >Send</button>
-    </form>
+
+      <div id="chat-window">
+        <div id="output"></div>
+        <div id="feedback" style="display : none"></div>
+        <div id="joined"></div>
+      </div>
+
+      <form id="form" action="#" style="display:none">
+      <input id="handle" type="text"  placeholder="User Name" readonly required>
+      <input id="message" type="text" placeholder="Message..." required>
+      <button id="send">Send</button>
+
+      </form>
+
+      <form id="formJoined" action="#" >
+      <input id="handle" type="text" name="handle" placeholder="User Name" required>
+      <button>Join</button>
+      </form>
+
   </div>
   <script src="./chat.js"></script>
 </body>
