Bug Fix - Clearing Message Value On Submit

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 
       <form id="form" action="#" style="display:none">
       <input id="handle" type="text"  placeholder="User Name" readonly required>
-      <input id="message" type="text" placeholder="Message..." required>
+      <input id="message" name="message" type="text" placeholder="Message..." required>
       <button id="send">Send</button>
 
       </form>
