--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="whatsapp.png">
   <link rel="stylesheet" href="./styles.css">
   <!-- Socket.io CDN  -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.dev.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
   <!-- Socket.io CDN  -->
 
   <script
@@ -38,6 +38,6 @@
       </form>
 
   </div>
-  <!-- <script src="./chat.js"></script> -->
+  <script src="./chat.js"></script>
 </body>
 </html>
